--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-My Portfolio
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,18 +6,148 @@ My Portfolio
   <title>Aravind K | Portfolio</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f5f5; }
-    header { background: #2c3e50; color: white; padding: 20px 40px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; }
-    header h1 { margin: 0; }
-    nav a { color: white; margin: 0 10px; text-decoration: none; }
-    section { padding: 40px; background: white; margin: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    h2 { color: #2c3e50; }
-    .contact a { color: #2c3e50; text-decoration: none; display: block; margin-bottom: 8px; }
-    footer { text-align: center; padding: 20px; font-size: 14px; color: #777; }
-    .profile { display: flex; align-items: center; gap: 20px; flex-wrap: wrap; }
-    .profile img { border-radius: 50%; width: 150px; height: 150px; object-fit: cover; border: 4px solid #2c3e50; }
-    ul { list-style: none; padding-left: 0; }
-    ul li::before { content: "✓ "; color: green; margin-right: 8px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f5f5f5;
+    }
+
+    header {
+      background: #2c3e50;
+      color: white;
+      padding: 20px 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 10px;
+      text-decoration: none;
+      font-size: 16px;
+    }
+
+    section {
+      padding: 40px;
+      background: white;
+      margin: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      color: #2c3e50;
+    }
+
+    .contact a {
+      color: #2c3e50;
+      text-decoration: none;
+      display: block;
+      margin-bottom: 8px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #777;
+    }
+
+    .profile {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .profile img {
+      border-radius: 50%;
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border: 4px solid #2c3e50;
+      align-items: center;
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    ul li::before {
+      content: "✓ ";
+      color: green;
+      margin-right: 8px;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        margin-top: 10px;
+      }
+
+      .profile {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+
+      .profile img {
+        margin-bottom: 20px;
+      }
+
+      section {
+        margin: 10px;
+        padding: 20px;
+      }
+
+      nav a {
+        font-size: 14px;
+        margin: 5px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      header h1 {
+        font-size: 20px;
+      }
+
+      nav {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav a {
+        margin: 5px 0;
+      }
+
+      h2 {
+        font-size: 20px;
+      }
+
+      section {
+        padding: 15px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -36,7 +165,7 @@ My Portfolio
 
   <section id="about">
     <div class="profile">
-      <img src="profile.jpg" alt="Aravind K Photo"> <!-- Replace 'profile.jpg' with your actual image filename -->
+      <img src="profile.jpg" alt="Aravind K Photo" onerror="this.src='default-avatar.png'">
       <div>
         <h2>About Me</h2>
         <p>I am a passionate fresher with knowledge in HTML, CSS, and Python. I am eager to apply my skills in real-world projects and contribute to dynamic development teams.</p>
@@ -87,4 +216,4 @@ My Portfolio
   </footer>
 
 </body>
-</html> 
+</html>
